2005-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:

	QI the element to check whether it's of some type,
	don't check the tag.

2005-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_title_cb):

	Use ephy_tab_set_title after ephy_tab_set_loading_title
	because set_title consumes the char* argument!
	Fixes invalid UTF-8 warnings.

2005-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix --disable-focus-fix and --disable-psm configure args.

2005-08-16  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c: (entry_activate_cb),
	(ephy_find_toolbar_open):

	Only activate link in typeahead mode, not in Ctrl-F find mode.

2005-08-16  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyFind.cpp:

	Return TRUE if the event was consumed.

	* embed/mozilla/mozilla-embed-single.cpp:

	More redundant code.

2005-08-16  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-find.c: (ephy_embed_find_activate_link):
	* embed/ephy-embed-find.h:
	* embed/mozilla/EphyFind.cpp:
	* embed/mozilla/EphyFind.h:
	* embed/mozilla/mozilla-embed-find.cpp:

	Activate the found link with a faked keypress event.

	* src/ephy-find-toolbar.c: (tab_search_key_press_cb),
	(entry_key_press_event_cb), (entry_activate_cb),
	(ephy_find_toolbar_set_embed), (ephy_find_toolbar_open),
	(ephy_find_toolbar_close):

	On enter, activate the found link instead of finding the next
	occurrence.
	Always really give focus to the find bar, instead of faking
	keypresses in the find bar entry while focusing the embed.
	Fixes bug #307216, bug #311985, bug #312419, bug #312367,
	bug #311929.

2005-08-15  Christian Persch  <chpe@cvs.gnome.org>

	* data/GNOME_Epiphany_Automation.server.in:

	Remove "-s" argument which hasn't been supported for ages.

	* data/mime-types-permissions.xml:

	Add more mime types.

	* lib/ephy-gui.c: (ephy_gui_menu_position_under_widget),
	(ephy_gui_menu_position_on_toolbar):