@@ -1,5 +1,12 @@
 2005-08-17  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-tab.c: (ephy_tab_set_loading_title),
+
+	Better fix: reorder again and use priv->title for
+	the set_loading_title call after the set_title call.
+
+2005-08-17  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/EventContext.cpp:
 
 	QI the element to check whether it's of some type,
